--- a/app/project/tennis/templates/tennis/resource.html
+++ b/app/project/tennis/templates/tennis/resource.html
@@ -8,9 +8,15 @@
   <a class="back-btn" href="{% url 'tennis:learn' %}"
     ><button>Back to Learn</button></a
   >
-  <h1>{{title}}</h1>
+  <h1 class="resource-title">{{title}}</h1>
+  <iframe class="resource-video" src="https://www.youtube.com/embed/dE6J82QSIIk" frameborder="0"></iframe>
   <img class="resource-img" src="{% static './community/images/profile-pic-temp.png' %}" alt="Resource img">
   <div class="resource-content">
+    <p class="subheading">Subheading</p>
+    <ul>
+      <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit quia similique doloribus officiis neque nobis voluptatum quae, blanditiis sapiente provident quasi assumenda?</li>
+      <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit quia similique doloribus officiis neque nobis voluptatum quae, blanditiis sapiente provident quasi assumenda?</li>
+    </ul>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit quia similique doloribus officiis neque nobis voluptatum quae, blanditiis sapiente provident quasi assumenda? Omnis vero eligendi quidem ut ullam velit ipsam distinctio modi dolorum at hic esse commodi repudiandae ex quam voluptas doloremque voluptates est vel aperiam perspiciatis, magnam, corrupti facilis. Quo voluptatibus maiores incidunt fugit pariatur eligendi odio iusto. Repudiandae natus, molestias odit quae voluptatum, cupiditate dolorem beatae repellendus ut, voluptatem pariatur deserunt! Doloremque delectus possimus placeat recusandae perferendis! Maiores esse natus sit earum dolor quia maxime repellendus amet veritatis quasi nisi illo, consequatur tenetur. Pariatur velit provident nemo quia.</p>
     
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit quia similique doloribus officiis neque nobis voluptatum quae, blanditiis sapiente provident quasi assumenda? Omnis vero eligendi quidem ut ullam velit ipsam distinctio modi dolorum at hic esse commodi repudiandae ex quam voluptas doloremque voluptates est vel aperiam perspiciatis, magnam, corrupti facilis. Quo voluptatibus maiores incidunt fugit pariatur eligendi odio iusto. Repudiandae natus, molestias odit quae voluptatum, cupiditate dolorem beatae repellendus ut, voluptatem pariatur deserunt! Doloremque delectus possimus placeat recusandae perferendis! Maiores esse natus sit earum dolor quia maxime repellendus amet veritatis quasi nisi illo, consequatur tenetur. Pariatur velit provident nemo quia.</p>
