--- a/app/project/tennis/static/tennis/styles/styles.css
+++ b/app/project/tennis/static/tennis/styles/styles.css
@@ -21,11 +21,21 @@ main#resource img {
      object-fit: cover;
   margin: 32px 0;
 }
+main#resource .resource-video {
+  width: 75vw;
+  height: 550px;
+  margin: 32px 0;
+  border: 10px solid #578DDD;
+}
 main#resource .resource-content {
   width: 75%;
   text-align: justify;
 }
-main#resource .resource-content p {
+main#resource .resource-content .subheading {
+  font-size: 1.4rem;
+  font-weight: 500;
+}
+main#resource .resource-content p, main#resource .resource-content li {
   line-height: 2rem;
 }
 main#resource a .resource-link {
