--- a/app/project/tennis/static/tennis/styles/_resources.scss
+++ b/app/project/tennis/static/tennis/styles/_resources.scss
@@ -8,7 +8,7 @@ main#resource {
   }
 
   img {
-    width: 300px;
+    width: 75vw;
     height: 300px;
     object-fit: cover;
     margin: 32px 0;
@@ -17,7 +17,7 @@ main#resource {
   .resource-video {
     width: 75vw;
     height: 550px;
-    margin: 32px 0;
+    margin: 72px 0;
 
     border: 10px solid $brand-colour;
   }
@@ -33,6 +33,16 @@ main#resource {
 
     p, li {
       line-height: 2rem;
+    }
+
+    img {
+      width: 100%;
+      height: 300px;
+      object-fit: cover;
+    }
+
+    span {
+      font-weight: bold;
     }
   }
 
