--- a/app/project/tennis/static/tennis/styles/styles.css
+++ b/app/project/tennis/static/tennis/styles/styles.css
@@ -15,7 +15,7 @@ main#resource .back-btn {
   align-self: flex-start;
 }
 main#resource img {
-  width: 300px;
+  width: 75vw;
   height: 300px;
   -o-object-fit: cover;
      object-fit: cover;
@@ -24,7 +24,7 @@ main#resource img {
 main#resource .resource-video {
   width: 75vw;
   height: 550px;
-  margin: 32px 0;
+  margin: 72px 0;
   border: 10px solid #578DDD;
 }
 main#resource .resource-content {
@@ -37,6 +37,15 @@ main#resource .resource-content .subheading {
 }
 main#resource .resource-content p, main#resource .resource-content li {
   line-height: 2rem;
+}
+main#resource .resource-content img {
+  width: 100%;
+  height: 300px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+main#resource .resource-content span {
+  font-weight: bold;
 }
 main#resource a .resource-link {
   margin-top: 48px;
