--- a/app/project/tennis/templates/tennis/resource.html
+++ b/app/project/tennis/templates/tennis/resource.html
@@ -11,44 +11,34 @@
   <h1 class="resource-title">{{ title }}</h1>
 
   {% if resource.resource_type == "video" %}
-    <iframe class="resource-video" src="https://www.youtube.com/embed/dE6J82QSIIk" frameborder="0"></iframe>
+    <iframe class="resource-video" src="{{ resource.video_url }}" frameborder="0"></iframe>
   {% elif resource.resource_type == "article" %}
     <img class="resource-img" src="{{ resource.article_img.url }}" alt="Article image">
 
     {% if sections %}
-      <!-- Iterating through sections for articles -->
-      {% for section in sections %}
-        <!-- Rendering section content based on section_type -->
-        {% if section.section_type == "heading" %}
-          <p class="subheading">{{ section.content }}</p>
-        {% elif section.section_type == "paragraph" %}
-          {% for para in section.content.split('\n') %}
-              <p>{{ para }}</p>
-            {% endfor %}
-        {% elif section.section_type == "image" %}
-          <img src="{{ section.image.url }}" alt="Section Image">
-        {% elif section.section_type == "bullet_points" %}
-          <ul>
-            {% for point in section.content.split('\n') %}
-              <li>{{ point }}</li>
-            {% endfor %}
-          </ul>
-        {% endif %}
-      {% endfor %}
+      <div class="resource-content">
+        <!-- Iterating through sections for articles -->
+        {% for section in sections %}
+          <!-- Rendering section content based on section_type -->
+          {% if section.section_type == "heading" %}
+            <p class="subheading">{{ section.content }}</p>
+          {% elif section.section_type == "paragraph" %}
+            {% for para in section.split_content %}
+                <p>{{ para }}</p>
+              {% endfor %}
+          {% elif section.section_type == "image" %}
+            <img src="{{ section.image.url }}" alt="Section Image">
+          {% elif section.section_type == "bullet_points" %}
+            <ul>
+              {% for point in section.split_content %}
+                <li>{{ point }}</li>
+              {% endfor %}
+            </ul>
+          {% endif %}
+        {% endfor %}
+      </div>
     {% endif %}
   {% endif %}
-
-
-  <div class="resource-content">
-    <ul>
-      <li><span>Lorem, ipsum dolor sit</span> amet consectetur adipisicing elit. Reprehenderit quia similique doloribus officiis neque nobis voluptatum quae, blanditiis sapiente provident quasi assumenda?</li>
-      <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit quia similique doloribus officiis neque nobis voluptatum quae, blanditiis sapiente provident quasi assumenda?</li>
-    </ul>
-    <p><span>Lorem, ipsum dolor sit amet</span> consectetur adipisicing elit. Reprehenderit quia similique doloribus officiis neque nobis voluptatum quae, blanditiis sapiente provident quasi assumenda? Omnis vero eligendi quidem ut ullam velit ipsam distinctio modi dolorum at hic esse commodi repudiandae ex quam voluptas doloremque voluptates est vel aperiam perspiciatis, magnam, corrupti facilis. Quo voluptatibus maiores incidunt fugit pariatur eligendi odio iusto. Repudiandae natus, molestias odit quae voluptatum, cupiditate dolorem beatae repellendus ut, voluptatem pariatur deserunt! Doloremque delectus possimus placeat recusandae perferendis! Maiores esse natus sit earum dolor quia maxime repellendus amet veritatis quasi nisi illo, consequatur tenetur. Pariatur velit provident nemo quia.</p>
-    
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit quia similique doloribus officiis neque nobis voluptatum quae, blanditiis sapiente provident quasi assumenda? Omnis vero eligendi quidem ut ullam velit ipsam distinctio modi dolorum at hic esse commodi repudiandae ex quam voluptas doloremque voluptates est vel aperiam perspiciatis, magnam, corrupti facilis. Quo voluptatibus maiores incidunt fugit pariatur eligendi odio iusto. Repudiandae natus, molestias odit quae voluptatum, cupiditate dolorem beatae repellendus ut, voluptatem pariatur deserunt! Doloremque delectus possimus placeat recusandae perferendis! Maiores esse natus sit earum dolor quia maxime repellendus amet veritatis quasi nisi illo, consequatur tenetur. Pariatur velit provident nemo quia.</p>
-    <img class="resource-img" src="{% static './community/images/profile-pic-temp.png' %}" alt="Resource img">
-  </div>
   <a href="{{ resource.reference }}">
     <p class="resource-link">Resource reference.</p>
   </a>
