--- a/app/project/tennis/templates/tennis/resource.html
+++ b/app/project/tennis/templates/tennis/resource.html
@@ -40,7 +40,7 @@
       </div>
     {% endif %}
   {% endif %}
-  <a href="{{ resource.reference }}">
+  <a href="{{ resource.reference }}" target="_blank">
     <p class="resource-link">Resource reference.</p>
   </a>
   {% else %}
