--- a/app/project/tennis/templates/tennis/resource.html
+++ b/app/project/tennis/templates/tennis/resource.html
@@ -14,9 +14,9 @@
   {% if resource.resource_type == "video" %}
     <iframe class="resource-video" src="https://www.youtube.com/embed/{{ resource.video_url }}" frameborder="0"></iframe>
   {% elif resource.resource_type == "article" %}
-    <img class="resource-img" src="{{ resource.article_img.url }}" alt="Article image">
+    <img class="resource-img" src="/{{resource.article_image }}" alt="Article image">
 
-    {% if sections %}
+    {% if sections != None %}
       <div class="resource-content">
         <!-- Iterating through sections for articles -->
         {% for section in sections %}
