--- a/app/project/tennis/static/tennis/styles/_resources.scss
+++ b/app/project/tennis/static/tennis/styles/_resources.scss
@@ -37,8 +37,9 @@ main#resource {
 
     img {
       width: 100%;
-      height: 300px;
+      height: 700px;
       object-fit: cover;
+      transform: scale(0.8);
     }
 
     span {
