--- a/app/project/tennis/static/tennis/styles/styles.css
+++ b/app/project/tennis/static/tennis/styles/styles.css
@@ -40,9 +40,10 @@ main#resource .resource-content p, main#resource .resource-content li {
 }
 main#resource .resource-content img {
   width: 100%;
-  height: 300px;
+  height: 700px;
   -o-object-fit: cover;
      object-fit: cover;
+  transform: scale(0.8);
 }
 main#resource .resource-content span {
   font-weight: bold;
