--- a/app/project/tennis/static/tennis/styles/styles.scss
+++ b/app/project/tennis/static/tennis/styles/styles.scss
@@ -2,6 +2,7 @@
 // @import './mixins';
 // @import './global';
 @import './base';
+@import './learn';
 @import './resources';
 // @import './feed';
 // @import './connect';
