--- a/app/project/tennis/static/tennis/styles/_learn.scss
+++ b/app/project/tennis/static/tennis/styles/_learn.scss
@@ -62,9 +62,8 @@ main#learn {
   }
 
   .resources {
-    // background-color: aqua;
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
     gap: 24px;
 
     a {
@@ -72,8 +71,13 @@ main#learn {
   
       .resource {
         display: flex;
-        gap: 12px;
+        flex-direction: column;
         align-items: center;
+        justify-content: space-between;
+
+        gap: 12px;
+        width: 200px;
+        height: 200px;
 
         border: 1px solid $black;
         border-radius: 8px;
@@ -84,32 +88,26 @@ main#learn {
           box-shadow: 4px 4px 14px #0000004c;
         }
   
-        // background-color: hotpink;
-    
-        .user-photo {
-          width: 100px;
-          height: 100px;
-          object-fit: cover;
-          transform: scale(0.8);
-  
-          border-radius: 50%;
-          border: 1px solid $black;
-        }
-  
         p {
           margin: 0;
         }
   
-        .username {
+        .resource-title {
           font-weight: 700;
         }
 
-        .name, .following {
+        .resource-content {
           font-weight: 300;
         }
 
-        .following {
+        .resource-tag {
           font-size: 0.85rem;
+          font-weight: 500;
+          background-color: $brand-colour;
+          color: $white;
+
+          padding: 8px 16px;
+          border-radius: 8px;
         }
       }
     }
