--- a/app/project/tennis/templates/tennis/learn.html
+++ b/app/project/tennis/templates/tennis/learn.html
@@ -24,16 +24,22 @@
         </option>
         <option value="fitness" {% if filter_option == 'fitness' %}selected{% endif %}>
           Fitness
-      </option>
-      <option value="stretch" {% if filter_option == 'stretch' %}selected{% endif %}>
-        Stretching
-      </option>
-      <option value="forehand" {% if filter_option == 'forehand' %}selected{% endif %}>
-        Forehand
-      </option>
-      <option value="backhand" {% if filter_option == 'backhand' %}selected{% endif %}>
-        Backhand
-      </option>
+        </option>
+        <option value="stretch" {% if filter_option == 'stretch' %}selected{% endif %}>
+          Stretching
+        </option>
+        <option value="forehand" {% if filter_option == 'forehand' %}selected{% endif %}>
+          Forehand
+        </option>
+        <option value="backhand" {% if filter_option == 'backhand' %}selected{% endif %}>
+          Backhand
+        </option>
+        <option value="volley" {% if filter_option == 'volley' %}selected{% endif %}>
+          Volley
+        </option>
+        <option value="slice" {% if filter_option == 'slice' %}selected{% endif %}>
+          Slice
+        </option>
       </select>
       <button type="submit">Apply Filter</button>
     </div>
