--- a/app/project/registration/static/registration/styles/_base.scss
+++ b/app/project/registration/static/registration/styles/_base.scss
@@ -75,6 +75,16 @@ a {
   width: 100px;
 }
 
+nav {
+  a {
+    text-decoration: none;
+  }
+}
+
+main {
+  padding: 16px 32px;
+}
+
 @media only screen and (max-width: 1023px) {
   .login-btns {
     display: flex;
