--- a/app/project/registration/static/registration/styles/styles.css
+++ b/app/project/registration/static/registration/styles/styles.css
@@ -71,6 +71,14 @@ a {
   width: 100px;
 }
 
+nav a {
+  text-decoration: none;
+}
+
+main {
+  padding: 16px 32px;
+}
+
 @media only screen and (max-width: 1023px) {
   .login-btns {
     display: flex;
