--- a/app/project/registration/static/registration/styles/_base.scss
+++ b/app/project/registration/static/registration/styles/_base.scss
@@ -1,7 +1,5 @@
 * {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
-    Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: $primary-font;
 }
 
 body {
@@ -9,7 +7,20 @@ body {
 }
 
 header {
-  background-color: #a992fa;
+  background-color: $white;
+  border-bottom: 1px solid #00000033;
+
+  .brand-name {
+    font-size: 2.4rem;
+    font-weight: bold;
+    font-family: $display-font;
+    color: $brand-colour;
+  }
+
+  a {
+    text-decoration: none;
+  }
+
   padding: 32px;
 
   display: flex;
@@ -101,6 +112,7 @@ nav {
 
 main {
   padding: 16px 32px;
+  margin-bottom: 75px;
 }
 
 @media only screen and (max-width: 1023px) {
