--- a/app/project/registration/static/registration/styles/_variables.scss
+++ b/app/project/registration/static/registration/styles/_variables.scss
@@ -1,4 +1,14 @@
-// Colours
+// Imports.
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Paytone+One&display=swap');
+
+// Colours.
 $brand-colour: #578DDD;
 $hover-colour: #9ABCEF;
 $white: #FFFFFF;
+
+// Fonts.
+$primary-font: "Open Sans", sans-serif;
+$display-font: "Paytone One", sans-serif;
+$secondary-font: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
+Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
+sans-serif;
