--- a/app/project/registration/static/registration/styles/styles.css
+++ b/app/project/registration/static/registration/styles/styles.css
@@ -1,5 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Paytone+One&display=swap");
 * {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
 body {
@@ -7,11 +8,21 @@ body {
 }
 
 header {
-  background-color: #a992fa;
+  background-color: #FFFFFF;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   padding: 32px;
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
+}
+header .brand-name {
+  font-size: 2.4rem;
+  font-weight: bold;
+  font-family: "Paytone One", sans-serif;
+  color: #578DDD;
+}
+header a {
+  text-decoration: none;
 }
 
 header h1 {
@@ -93,6 +104,7 @@ nav a:hover {
 
 main {
   padding: 16px 32px;
+  margin-bottom: 75px;
 }
 
 @media only screen and (max-width: 1023px) {
