--- a/app/project/registration/static/registration/styles/_base.scss
+++ b/app/project/registration/static/registration/styles/_base.scss
@@ -113,7 +113,7 @@ button.delete-btn:hover {
 button:hover,
 .btn:hover {
   cursor: pointer;
-  background-color: #207025;
+  background-color: $brand-colour;
 }
 
 .tennis-btn {
