--- a/app/project/registration/static/registration/styles/styles.css
+++ b/app/project/registration/static/registration/styles/styles.css
@@ -99,7 +99,7 @@ button.delete-btn:hover {
 button:hover,
 .btn:hover {
   cursor: pointer;
-  background-color: #207025;
+  background-color: #578DDD;
 }
 
 .tennis-btn {
