--- a/app/project/community/templates/community/user.html
+++ b/app/project/community/templates/community/user.html
@@ -1,5 +1,8 @@
-{% extends './base.html' %} 
+{% extends '../registration/base.html' %} 
 {% load static %} 
+{% block extra_styles %}
+<link rel="stylesheet" href="{% static './community/styles/styles.css' %}">
+{% endblock %}
 {% block scripts %}
 <script>
   const toggleLikeUrl = "{% url 'community:toggle-like' post_id=0 %}".replace("0", "__post_id__");
