--- a/app/project/planner/templates/planner/calendar.html
+++ b/app/project/planner/templates/planner/calendar.html
@@ -1,6 +1,7 @@
-{% extends './base.html' %} 
+{% extends '../registration/base.html' %} 
 {% load static %} 
 {% block extra_styles %}
+<link rel="stylesheet" href="{% static './planner/styles/styles.css' %}">
 <link
   rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -8,7 +9,7 @@
   crossorigin="anonymous"
   referrerpolicy="no-referrer"
 />
-{% endblock %} 
+{% endblock %}
 {% block scripts %}
 <script src="{% static './planner/scripts/calendar.js' %}" defer></script>
 {% endblock %} 
