--- a/app/project/registration/static/registration/styles/_variables.scss
+++ b/app/project/registration/static/registration/styles/_variables.scss
@@ -5,6 +5,13 @@
 $brand-colour: #578DDD;
 $hover-colour: #9ABCEF;
 $white: #FFFFFF;
+$violet: #A992FA;
+$orange: #ee7d2c;
+$green: #32ca6f;
+$dark-grey: #3D3D3D;
+$light-grey:#656468;
+$white-grey:#8F8E8E;
+$disabled: #B3B3B3;
 
 // Fonts.
 $primary-font: "Open Sans", sans-serif;
