--- a/app/project/community/static/community/styles/styles.scss
+++ b/app/project/community/static/community/styles/styles.scss
@@ -1,7 +1,7 @@
 @import './variables';
 @import './mixins';
 @import './global';
-@import './base';
+// @import './base';
 @import './profile';
 @import './feed';
 @import './connect';
