--- a/app/project/community/templates/community/feed.html
+++ b/app/project/community/templates/community/feed.html
@@ -18,7 +18,7 @@
 <main id="feed">
 {% if user_profile %}
   {% if posts %}
-    <h2>Feed</h2>
+    <!-- <h2>Feed</h2> -->
     <button class="create-post-btn">Create New Post</button>
     <div class="posts">
       {% for post in posts %}
