--- a/app/project/tennis/static/tennis/styles/_learn.scss
+++ b/app/project/tennis/static/tennis/styles/_learn.scss
@@ -1,5 +1,5 @@
 main#learn {
-  margin-bottom: 32px;
+  // margin-bottom: 32px;
 
   .search-form {
     display: flex;
@@ -79,8 +79,8 @@ main#learn {
         justify-content: space-between;
 
         gap: 12px;
-        width: 200px;
-        height: 200px;
+        width: 250px;
+        height: 250px;
 
         border: 1px solid $black;
         border-radius: 8px;
