--- a/app/project/community/static/community/styles/_variables.scss
+++ b/app/project/community/static/community/styles/_variables.scss
@@ -1,8 +1,10 @@
 // Colours
 $brand-colour: #578DDD;
+$hover-colour: #9ABCEF;
 $violet: #A992FA;
 $orange: #ee7d2c;
 $green: #32ca6f;
+$active: #BDFDDB;
 $dark-grey: #3D3D3D;
 $light-grey:#656468;
 $white-grey:#8F8E8E;
