--- a/app/project/registration/static/registration/styles/_base.scss
+++ b/app/project/registration/static/registration/styles/_base.scss
@@ -145,6 +145,14 @@ nav {
     &:hover {
       background-color: $hover-colour;
     }
+
+    .profile-page-pic {
+      border-radius: 50%;
+      border: 1px solid #00000033;
+      width: 32px;
+      height: 32px;
+      object-fit: cover;
+    }
   }
 }
 
